added get API calls

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Pixel IUT war</title>
 </head>
 <body>
-    
+    <button>Fetch</button>
+    <script type="module" src="script/api.js"></script>
 </body>
 </html>
