--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Pixel IUT war</title>
 </head>
 <body>
-    <button>Fetch</button>
-    <script type="module" src="script/api.js"></script>
+    <div class="view"></div>
+    <input type="color" id="color" value="#FFFFFF">
+    <div class="team-select"></div>
+    <script type="module" src="/script/grid-view.js"></script>
 </body>
 </html>
