--- a/index.html
+++ b/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Pixel IUT war</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="stats">
+      <img src="assets/pixil-frame-0.png" alt="logo pixel war" />
+      <div class="table">
+        <div class="thead">
+            <div>Nom</div>
+            <div>Équipe</div>
+            <div>Dernière modification</div>
+            <div>Banni</div>
+        </div>
+        <div class="tbody">
+
+        </div>
+      </div>
+    </div>
     <div class="view"></div>
-    <input type="color" id="color" value="#FFFFFF">
-    <div class="team-select"></div>
+    <div class="controls">
+      <h2>Identification Obligatoire</h2>
+      <input type="password" id="uid-input" placeholder="89302fd2" />
+      <h2>Choisir une couleur</h2>
+      <input type="color" id="color" value="#FFFFFF" />
+      <h2>Temps d'attente avant modification</h2>
+      <p id="wait-info">...</p>
+      <h2>Choisir votre équipe</h2>
+      <div class="team-select"></div>
+    </div>
     <script type="module" src="/script/grid-view.js"></script>
-</body>
+  </body>
 </html>
