--- a/index.html
+++ b/index.html
@@ -17,20 +17,21 @@
       <img src="assets/pixil-frame-0.png" alt="logo pixel war" />
       <div class="table">
         <div class="thead">
-            <div>Nom</div>
-            <div>Équipe</div>
-            <div>Dernière modification</div>
-            <div>Banni</div>
+          <div>Nom</div>
+          <div>Équipe</div>
+          <div>Dernière modification</div>
+          <div>Banni</div>
         </div>
-        <div class="tbody">
-
-        </div>
+        <div class="tbody"></div>
       </div>
     </div>
     <div class="view"></div>
     <div class="controls">
       <h2>Identification Obligatoire</h2>
-      <input type="password" id="uid-input" placeholder="89302fd2" />
+      <div>
+        <input type="password" id="uid-input" placeholder="89302fd2" />
+        <button id="credentials-btn">Valider</button>
+      </div>
       <h2>Choisir une couleur</h2>
       <input type="color" id="color" value="#FFFFFF" />
       <h2>Temps d'attente avant modification</h2>
